@@ -16,12 +16,13 @@
  - Fixed use of %h in dialog-tab buttons [688937].
  - Fixed printing/logging timestamps that contain invalid utf8
    [688548].
- - Added "Resizable userlist" option.
+ - Added "Resizable userlist" option (default ON).
  - Strip colors on topic change.
  - Fixed (snotice) and (notice) tabs being swapped [687437].
  - Made more strings translatable.
  - Allow loading empty text events [691191].
  - Fixed xtext race condition [678874].
+ - Added ability to show/hide the channel-mode buttons.
  - 
  - 
  - 
